--- a/rajasthangoat.com-dev/index.html
+++ b/rajasthangoat.com-dev/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -14,7 +14,8 @@
 
 <body id="body-content" style="padding-top: 4.5rem">
     <nav class="navbar navbar-expand-sm bg-dark fixed-top navbar-dark justify-content-end">
-        <a class="navbar-brand" href="#"><img src="static/logo.jpg"><span id="nav-content">Mahila Bakri Palak Producer Company Ltd</span></a>
+        <a class="navbar-brand" href="#"><img src="static/logo.jpg"><span id="nav-content">Mahila Bakri Palak Producer
+                Company Ltd</span></a>
         <button class="navbar-toggler ml-auto mr-1" type="button" data-toggle="collapse"
             data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -102,15 +103,18 @@
     </div>
     <div class="jumbotron text-center" id="promotion-header">
         <h1 class="display-4">"Online Marketing Information Platform For Well Bred and Traceable Goats"</h1>
-        <p class="lead">Goat marketing initiative by <b>Pisangan Mahila Bakri Palak Producer Company Limited.(PMBPPCL)</b> Promoted under the
-        aegis of <b>Rajasthan Agriculture Competitiveness Project (RACP)</b> supported by <b>World Bank</b>.</p>
+        <p class="lead">Goat marketing initiative by <b>Pisangan Mahila Bakri Palak Producer Company
+                Limited.(PMBPPCL)</b> Promoted under the
+            aegis of <b>Rajasthan Agriculture Competitiveness Project (RACP)</b> supported by <b>World Bank</b>.</p>
     </div>
     <div class="container" id="how-safe">
         <h1 class="display-4 text-center">Traceability : Technology ensures the source of goats.
         </h1>
         <p class="lead">
-            You love your meat!! Don't you? But ever wondered from where it is coming from? Well worry not. We are working in the
-            background to make sure you get the best quality of goats with traceability records for producing best meat. We employ
+            You love your meat!! Don't you? But ever wondered from where it is coming from? Well worry not. We are
+            working in the
+            background to make sure you get the best quality of goats with traceability records for producing best meat.
+            We employ
             our technology to receive the animal's data and information right from animal end.
         </p>
         <img src="static/how_safe_food.jpg" class="img-fluid" />
@@ -118,11 +122,15 @@
     <div class="container" id="about-us">
         <div class="jumbotron " style=" background-color: #FFF">
             <h1 class="text-center">Welcome!!</h1>
-            <p class="lead">PMBPPCL welcomes you all! If you are a goat farmer, breeder, meat producer or a prospective goat buyer, then you are at
-            the right place. Here, farmers can network with meat processors and livestock buyers.At <b>PMBPPCL</b>, goat rearing is
-            a serious business.Goats are handpicked for superior genetics, great built,they are pasture raised and maximum attention
-            is given for proper health care and management.
-                <div class="text-center"><b>Our goal: We strive to provide best quality goats reared naturally especially for you.</b></div>
+            <p class="lead">PMBPPCL welcomes you all! If you are a goat farmer, breeder, meat producer or a prospective
+                goat buyer, then you are at
+                the right place. Here, farmers can network with meat processors and livestock buyers.At <b>PMBPPCL</b>,
+                goat rearing is
+                a serious business.Goats are handpicked for superior genetics, great built,they are pasture raised and
+                maximum attention
+                is given for proper health care and management.
+                <div class="text-center"><b>Our goal: We strive to provide best quality goats reared naturally
+                        especially for you.</b></div>
             </p>
         </div>
         <div class="jumbotron " style="background-color: #FFF; padding-top:2rem;">
@@ -130,7 +138,8 @@
             <p class="lead">
                 We are a unique, women centric and change maker farmer producer
                 company (FPC) committed towards providing widows and poor women a
-                means of livelihood.Farmer producer companies adopt all the good principles of cooperatives and the efficient business
+                means of livelihood.Farmer producer companies adopt all the good principles of cooperatives and the
+                efficient business
                 practices of companies.
                 At Pisangan Mahila Bakri Palak Producer Company Limited,
                 We believe in the collective power of every farmer and each lady
@@ -167,8 +176,10 @@
                             <div class="card-body">
                                 <h3 class="card-title">OUR MOTTO:</h5>
                                     <p>
-                                        Healthy and happy goats with best germplasm for breeding and healthiest stock for meat is with Pisangan PMBPPCL.</p>
-                                    <b>Our Motto is to provide best quality goats reared especially in natural habitat for you
+                                        Healthy and happy goats with best germplasm for breeding and healthiest stock
+                                        for meat is with Pisangan PMBPPCL.</p>
+                                    <b>Our Motto is to provide best quality goats reared especially in natural habitat
+                                        for you
                                     </b>
                             </div>
                         </div>
@@ -184,27 +195,36 @@
                                 <h3 class="card-title"> Peek Behind the Curtains</h5>
                                     <p>
                                         PMBPPCL ( Pisangan Mahila Bakri Palak Producer Company Limited) is a women run
-                                        farmer producer company that has about 400 lady members and is working for upliftment
-                                        and empowerment of rural women. It is promoted under the aegis of RACP supported by
+                                        farmer producer company that has about 400 lady members and is working for
+                                        upliftment
+                                        and empowerment of rural women. It is promoted under the aegis of RACP supported
+                                        by
                                         World Bank. RACP has been instrumental in strengthening the women
                                         farmers by providing especially designed sustainable goat package that includes:
 
                                     </p> <br><br>
                                     <ul>
-                                    <li><b> Breeding management: </b> it includes distribution of Elite bucks
-                                        for breed improvement and buck rotation for preventing inbreeding depression.</li>
-                                    <li><b> Nutritional (Feeding) Management: </b> it includes distribution of Feeding
-                                        water trough, Chaff cutter, Azolla demonstration and feed supplement</li>
-                                    <li><b> Health Management: </b> It includes organizing Animal health camps for treatment,
-                                        provision of Mobile van and clean milk kits for diagnostic purpose..</li>
-                                    <li><b> Marketing: </b> it includes distribution of weighing balance, procurement and
-                                        marketing of goat milk and goat milk soap and marketing of live animals.</li>
-                                    <li><b> General Management: </b> it includes provision of goat house.</li>
-                                    <li><b>Capacity Building: </b> it includes training of professional staff, MTG and LLWs.</li>
+                                        <li><b> Breeding management: </b> it includes distribution of Elite bucks
+                                            for breed improvement and buck rotation for preventing inbreeding
+                                            depression.</li>
+                                        <li><b> Nutritional (Feeding) Management: </b> it includes distribution of
+                                            Feeding
+                                            water trough, Chaff cutter, Azolla demonstration and feed supplement</li>
+                                        <li><b> Health Management: </b> It includes organizing Animal health camps for
+                                            treatment,
+                                            provision of Mobile van and clean milk kits for diagnostic purpose..</li>
+                                        <li><b> Marketing: </b> it includes distribution of weighing balance,
+                                            procurement and
+                                            marketing of goat milk and goat milk soap and marketing of live animals.
+                                        </li>
+                                        <li><b> General Management: </b> it includes provision of goat house.</li>
+                                        <li><b>Capacity Building: </b> it includes training of professional staff, MTG
+                                            and LLWs.</li>
                                     </ul>
                                     <br>
-                                    <p>Along with the Goat package, Livelihood activity includes distribution of goat units to widow and specially abled women
-                                    for income generation.</p>
+                                    <p>Along with the Goat package, Livelihood activity includes distribution of goat
+                                        units to widow and specially abled women
+                                        for income generation.</p>
                             </div>
                         </div>
                     </div>
@@ -218,13 +238,18 @@
                             <div class="card-body">
                                 <h3 class="card-title">OUR STORY</h5>
                                     <p>
-                                        In a picturesque hamlet of Pisangan, Ajmer, Rajasthan, Sarita Devi is a widow goat farmer and a member of PMBPPCL. She
-                                        survived all odds with the benefits from activities under RACP. Her success story in her own words is as under:
+                                        In a picturesque hamlet of Pisangan, Ajmer, Rajasthan, Sarita Devi is a widow
+                                        goat farmer and a member of PMBPPCL. She
+                                        survived all odds with the benefits from activities under RACP. Her success
+                                        story in her own words is as under:
                                     </p>
                                     </p>
-                                    "I was faced with mammoth task of raising my children after demise of my husband. The prospects were bleak. I then took
-                                    training of goat farming and was donated few goats with goat package (like weighting scale, feeding and water trough,
-                                    azolla, medicines, teat dip, etc ) by RACP, given means to raise the goats in stress free and natural pasture fed way.
+                                    "I was faced with mammoth task of raising my children after demise of my husband.
+                                    The prospects were bleak. I then took
+                                    training of goat farming and was donated few goats with goat package (like weighting
+                                    scale, feeding and water trough,
+                                    azolla, medicines, teat dip, etc ) by RACP, given means to raise the goats in stress
+                                    free and natural pasture fed way.
                                     Today I have good earnings and am a source of inspiration to all."
                                     <br>Testimonial</b>: Sarita Devi of Devnagar village.
                                     </p>
@@ -241,9 +266,12 @@
         <div class="jumbotron text-center" style="background-color:#FFF">
             <h1 class="text-center">Marketing Information</h1>
             <p class="lead">
-                Pisangan is located in the heart of natural breeding tract of Sirohi goat. The Sirohi goat is a dual-purpose compact,
-                medium to large sized goat breed reared for both meat and milk production. This goat is named after its actual breeding
-                tract, Sirohi district of Rajasthan. It is believed to have been developed by the Raika community of Rajasthan which is
+                Pisangan is located in the heart of natural breeding tract of Sirohi goat. The Sirohi goat is a
+                dual-purpose compact,
+                medium to large sized goat breed reared for both meat and milk production. This goat is named after its
+                actual breeding
+                tract, Sirohi district of Rajasthan. It is believed to have been developed by the Raika community of
+                Rajasthan which is
                 long been associated with the developement of many other livestock breeds.
             </p>
         </div>
@@ -255,7 +283,8 @@
                         class="card-img-top" src="static/for_breeding.jpg" alt="For breeding"></a>
                 <div class="card-body" style="background-color:#FFF">
                     <p class="card-text text-center"><u><a
-                                href="https://testbioticvet.blogspot.com/p/sirohi-goats-breeding-purpose.html">For Breeding Purpose</a></u></p>
+                                href="https://testbioticvet.blogspot.com/p/sirohi-goats-breeding-purpose.html">For
+                                Breeding Purpose</a></u></p>
                     <div class="card-body text-center">
                         <a href="https://play.google.com/store/apps/details?id=com.fiftyfivetech.rajasthangoat"
                             class="btn btnknowmore ">DOWNLOAD APP</a>
@@ -268,7 +297,8 @@
                         class="card-img-top" src="static/for_meat.jpg" alt="For meet"></a>
                 <div class="card-body" style="background-color:#FFF">
                     <p class="card-text text-center"><u><a
-                                href="https://testbioticvet.blogspot.com/p/sirohi-goats-for-meat-purpose.html">For Meat Purpose</a></u></p>
+                                href="https://testbioticvet.blogspot.com/p/sirohi-goats-for-meat-purpose.html">For Meat
+                                Purpose</a></u></p>
 
 
                     <div class="card-body text-center">
